Fix: Replace cover image and update Amazon links

--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -42,9 +42,9 @@ import BaseLayout from '../layouts/BaseLayout.astro';
           </div>
           
           <div class="buy-links">
-            <a href="https://www.amazon.com/dp/YOUR_KINDLE_ASIN" class="btn btn-primary">Kindle - $9.99</a>
-            <a href="https://www.amazon.com/dp/YOUR_PAPERBACK_ASIN" class="btn btn-primary">Paperback - $19.99</a>
-            <a href="https://www.audible.com/pd/YOUR_AUDIOBOOK_ASIN" class="btn btn-primary">Audiobook</a>
+            <a href="https://www.amazon.com/dp/B0GBVJX23D" class="btn btn-primary">Kindle - $9.99</a>
+            <a href="https://www.amazon.com/dp/B0GBVJX23D" class="btn btn-primary">Paperback - $19.99</a>
+            <a href="https://www.audible.com/pd/YOUR_AUDIOBOOK_ASIN" class="btn btn-primary">Audiobook (Coming Soon)</a>
           </div>
         </div>
       </div>
@@ -69,8 +69,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
             <span>📅 2024</span>
           </div>
           <div class="buy-links">
-            <a href="https://www.amazon.com/dp/YOUR_TIKTOK_KINDLE" class="btn">Kindle</a>
-            <a href="https://www.audible.com/pd/YOUR_TIKTOK_AUDIO" class="btn">Audiobook</a>
+            <a href="https://www.amazon.com/dp/B0G84HYJ1C" class="btn">Kindle</a>
+            <a href="https://www.audible.com/pd/YOUR_TIKTOK_AUDIO" class="btn">Audiobook (In Production)</a>
           </div>
         </div>
         
