--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -82,7 +82,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       
       header {
         border-bottom: 1px solid var(--color-border);
-        padding: 1.5rem 0;
+        padding: 1rem 0;
         margin-bottom: 3rem;
       }
       
@@ -99,7 +99,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       }
       
       .logo img {
-        height: 2.5rem;
+        height: 85px;
         width: auto;
       }
       
